# AKLabs

./: CMakeLists.txt  Makefile  calculator.cpp  calculator.h
patches/: 0001-fix-truncation-error.patch  0002-formatting-use-tabs-instead-of-spaces.patch
src/: calculator.cpp  calculator.h  main.cpp
